# smart-inventory-forecaster

./: .gitignore  README.md  launch.ps1  pyproject.toml  render.yaml  requirements-deploy.txt  requirements.txt
api/: main.py
data/processed/: eda_sku_metrics.parquet  eda_sku_shortlist.parquet  phase2_cv_results.parquet  phase3_inventory_recommendations.parquet
docs/: phase2_architecture.md  phase2_planning_notes.md
frontend/: index.html
notebooks/: 01_eda.ipynb  02_baseline_sarima.ipynb  03_baseline_prophet.ipynb  04_lgbm_per_sku.ipynb  05_lgbm_global.ipynb  06_hybrid.ipynb  07_croston.ipynb  08_comparison.ipynb  09_inventory_optimization.ipynb
scripts/: demo_agent.py  run_phase2.py  run_phase3.py
src/agent/: agent.py  tools.py
src/dashboard/: app.py
src/data/: loader.py
src/evaluation/: cv.py  metrics.py
src/features/: builder.py
src/inventory/: optimizer.py
src/models/: base.py  croston.py  hybrid.py  lgbm.py  prophet.py  sarima.py
tests/: test_loader.py  test_validate_sales.py
tests/agent/: test_tools.py
tests/evaluation/: test_cv.py  test_metrics.py
tests/features/: test_builder.py
tests/inventory/: test_optimizer.py
tests/models/: test_base.py  test_croston.py  test_hybrid.py  test_lgbm.py  test_prophet.py  test_sarima.py
